--- a/_posts/1985-10-26-Test-Post.md
+++ b/_posts/1985-10-26-Test-Post.md
@@ -3,6 +3,8 @@ layout: post
 title: Test Post
 ---
 
+using octopage to edit from phone. 
+
 ## This is a sub-title
 
 This is a test post writen in markdown. To learn more about markdown check out the [documentation](http://daringfireball.net/projects/markdown/) on [Daring Fireball](http://daringfireball.net/).
@@ -13,4 +15,4 @@ This is a test post writen in markdown. To learn more about markdown check out t
 
 "Selling out" and the whole thing that went down w/ Sparrow selling to Google. Write about growing up in NW and grunge and indie rock and skateboarding etc—throughout my life there has been this constant pressure to stay "authentic" and not "sell out" as if "selling out" was essentially denying your own integrity and just doing what someone else wanted because you stood to gain financially.
 
-Historically, there are tons of cases of this, but it taints us and lets us beleive that we know what is going on with these people and the circumstances of the deal, etc.
+Historically, there are tons of cases of this, but it taints us and lets us beleive that we know what is going on with these people and the circumstances of the deal, etc
